# subspell

./: .gitignore  README.md  build_gui.py  generate_icon.py  pyproject.toml
.github/workflows/: build.yml  release.yml
assets/: SubSpell.spec  generate_build_files.py  generate_icon.py
src/subspell/: __init__.py  __main__.py  cli.py  config.py  gui.py  spellchecker.py  subtitle.py  utils.py
src/subspell/language_rules/: __init__.py  bg.py
src/subspell/providers/: __init__.py  base.py  gemini.py
