[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subspell"
version = "0.0.2-dev"
description = "A subtitle spelling, punctuation and grammar correction tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "mkrastev", email = "mkrastev@example.com" }
]
dependencies = [
    "google-genai",
    "pysubs2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/mkrastev/subspell"
Repository = "https://github.com/mkrastev/subspell.git"

[project.scripts]
subspell = "subspell.cli:main"
subspell-gui = "subspell.gui:run_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/subspell"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
    "assets/**/*",
]