[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subspell"
version = "0.0.2-dev"
description = "A subtitle spelling, punctuation and grammar correction tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "mkrastev", email = "mkrastev@example.com" }
]
dependencies = [
    "google-genai",
    "pysubs2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/mkrastev/subspell"
Repository = "https://github.com/mkrastev/subspell.git"

[project.scripts]
subspell = "subspell.cli:main"
subspell-gui = "subspell.gui:run_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/subspell"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
    "assets/**/*",
]

[[tool.cxfreeze.executables]]
script = "src/subspell/gui.py"
base = "gui"
target_name = "SubSpell"
copyright = "SubSpell 0.0.2-dev"
icon = "assets/icon.ico"
shortcut_name = "SubSpell"
shortcut_dir = "SubSpellMenu"


[tool.cxfreeze.build_exe]
includes = ["src.subspell.spellchecker", "src.subspell.subtitle", "src.subspell.config", "src.subspell"]
packages = ["google.genai", "pysubs2", "src.subspell", "src.subspell.spellchecker", "src.subspell.subtitle", "src.subspell.config"]
zip_include_packages = ["google-genai", "pysubs2"]
include_msvcr = true

[tool.cxfreeze.bdist_msi]
add_to_path = true
# use a different upgrade_code for your project
upgrade_code = "{6B29FC40-CA47-1067-B31D-00DD010662DA}"

[tool.cxfreeze.bdist_msi.data]
Directory = [
    ["ProgramMenuFolder", "TARGETDIR", "."],
    ["SubSpellMenu", "ProgramMenuFolder", "SUBSPELL~1|SubSpell"]
]
ProgId = [
    ["Prog.Id", 0, 0, "SubSpell is a subtitle spelling, punctuation and grammar correction tool", "IconId", 0]
]
Icon = [
    ["IconId", "assets/icon.ico"]
]
